# fast-api-tf-model-serving

./: docker-compose.yml  index.md  pyproject.toml
notebooks/: basic-image-classification.ipynb  basic-text-binary-classification.ipynb  cifar10_image_classification.ipynb  kuzushiji-k49-image-classification.ipynb  kuzushiji-kminst-image-classification.ipynb  stack-overflow-multilabel-classification.ipynb
