[project]
name = ""
version = "1.0"
description = "Fast API for serving ML Models"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "fastapi>=0.109,<1.0",
    "httpx>=0.26.0,<1.0",
    "Pillow>=10.2.0,<11.0",
    "uvicorn>=0.27.0,<1.0",
    "tensorflow-metal>=1.1.0,<2.0;    sys_platform == 'darwin'",
    "tensorflow-macos>=2.15.0,<3.0;   sys_platform == 'darwin'",
    "tensorflow-cpu>=2.15.0,<3.0;     sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorflow-aarch64>=2.15.0,<3.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "numpy>=1.26.3,<2.0",
    "matplotlib>=3.8.2,<4.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
    "jupyterlab>=4.0.11",
]
